--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <main class="main">
             <div class="main__navigation">
                 <div class="main__navigation__list">
-                    <div class="main__navigation--item selected">
+                    <!-- <div href="" class="main__navigation--item selected">
                         <svg class="icon icon--small icon--inbox w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                             <path fill-rule="evenodd" d="M5.024 3.783A1 1 0 0 1 6 3h12a1 1 0 0 1 .976.783L20.802 12h-4.244a1.99 1.99 0 0 0-1.824 1.205 2.978 2.978 0 0 1-5.468 0A1.991 1.991 0 0 0 7.442 12H3.198l1.826-8.217ZM3 14v5a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-5h-4.43a4.978 4.978 0 0 1-9.14 0H3Z" clip-rule="evenodd"/>
                         </svg>
@@ -34,33 +34,30 @@
                         Personal
                     </div>
                     <div class="main__navigation--item">
-                        <!-- <svg class="w-6 h-6 text-gray-800 dark:text-white icon icon--small icon--folder" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-                            <path fill-rule="evenodd" d="M3 6a2 2 0 0 1 2-2h5.532a2 2 0 0 1 1.536.72l1.9 2.28H3V6Zm0 3v10a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V9H3Z" clip-rule="evenodd"/>
-                        </svg> -->
                         <svg class="w-6 h-6 text-gray-800 dark:text-white icon--small" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7H5a2 2 0 0 0-2 2v4m5-6h8M8 7V5a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2m0 0h3a2 2 0 0 1 2 2v4m0 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-6m18 0s-4 2-9 2-9-2-9-2m9-2h.01"/>
                         </svg>                          
                         Work
                     </div>
-                    <div class="main__navigation--item">
+                    <a class="main__navigation--item">
                         <svg class="w-6 h-6 text-gray-800 dark:text-white icon icon--small icon--heart" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                             <path d="m12.75 20.66 6.184-7.098c2.677-2.884 2.559-6.506.754-8.705-.898-1.095-2.206-1.816-3.72-1.855-1.293-.034-2.652.43-3.963 1.442-1.315-1.012-2.678-1.476-3.973-1.442-1.515.04-2.825.76-3.724 1.855-1.806 2.201-1.915 5.823.772 8.706l6.183 7.097c.19.216.46.34.743.34a.985.985 0 0 0 .743-.34Z"/>
                         </svg>
                         Hobbies
-                    </div>
+                    </a> -->
                 </div>
-                <div class="main__navigation--item main__navigation--item__add-category">
-                    <form class="main__navigation--item__add-category--form main__navigation--item__add-category--form__hidden">
+                <div class="main__navigation--item main__navigation__add-category">
+                    <form class="main__navigation__add-category--form main__navigation__add-category--form__hidden">
                         <p><strong>Add Category</strong></p>
-                        <input class="input input__small main__navigation--item__add-category--form__input" type="text" placeholder="Enter Name" />
+                        <input class="input input__small main__navigation__add-category--form__input" type="text" placeholder="Enter Name" />
                         <select class="input__small dropdown" name="" id="">
                             <option value="" selected>Select a folder</option>
                             <option>Personal</option>
                             <option>Work</option>
                         </select>
-                        <button class="main__navigation--item__add-category--form__button" type="submit">Add</button>
+                        <button class="main__navigation__add-category--form__button" type="submit">Add</button>
                     </form>
-                    <button onclick="console.log('Click')" type="button" class="main__navigation--item__add-category__button">
+                    <button onclick="console.log('Click')" type="button" class="main__navigation__add-category__button">
                         <svg class="w-6 h-6 text-gray-800 dark:text-white icon icon--small icon--plus" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7 7V5"/>
                         </svg>                          
